--- a/mysql_db_operation/package.json
+++ b/mysql_db_operation/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "CLG_AWT_19CE055",
+  "name": "mysql_db_operation",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vivekapadia/CLG_AWT_19CE055.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "vivekapadia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vivekapadia/CLG_AWT_19CE055/issues"
   },
-  "homepage": "https://github.com/vivekapadia/CLG_AWT_19CE055#readme"
+  "homepage": "https://github.com/vivekapadia/CLG_AWT_19CE055#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.14"
+  }
 }
