--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-node_modules
-package-lock.json
+CRUD_Operation_using_NodeJS_ExpressJS_MySQL/package-lock.json
+CRUD_Operation_using_NodeJS_ExpressJS_MySQL/node_modules
